Fix horizontal scroll bar flickering sometimes when data is loading

--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -16,8 +16,8 @@
 
 #loader {
 	position: absolute;
-	top: 0;
-	right: 0;
+	top: 1;
+	right: 1;
 }
 
 #runtime-errors {
